--- a/templates/profile_user.html
+++ b/templates/profile_user.html
@@ -29,6 +29,12 @@
                     <p class="text-left"><strong>Mobile telephone: </strong><br>
                         {{parse['mobile_telephone']}}</p>
                     <br>
+                    <p class="text-left"><strong>City: </strong><br>
+                        {{parse['hometown']}}</p>
+                    <br>
+                    <p class="text-left"><strong>Address: </strong><br>
+                        {{parse['address']}}</p>
+                    <br>
                     </center>
                 </div>
                 <div class="modal-footer">
