--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,12 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script type="text/javascript">
+        function set_message_count(n) {
+            $('#message_count').text(n);
+            $('#message_count').css('visibility', n ? 'visible' : 'hidden');
+        }
+    </script>
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +25,16 @@
         <a class="navbar-brand" href="/">Магазин</a>
         {% if current_user.is_authenticated %}
     		<a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
-		{% else %}
+            <a class="navbar-brand" href="/messages">
+                        Сообщения
+                        {% set new_messages = current_user.new_messages() %}
+                        <span id="message_count" class="badge"
+                              style="visibility: {% if new_messages %}visible
+                                                 {% else %}hidden {% endif %};">
+                            {{ new_messages }}
+                        </span>
+                    </a>
+            {% else %}
     	<p>
         	<a class="btn btn-primary " href="/register">Зарегистрироваться</a>
         	<a class="btn btn-success" href="/login">Войти</a>
