--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,101 @@
 	<meta charset="UTF-8">
 	<title>{{title}}</title>
 	<link rel="stylesheet" href="/static/css/style.css">
-	<link rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-    crossorigin="anonymous">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<script src="{{url_for('static', filename='jquery-3.5.0.min.js')}}" type="text/javascript"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="{{url_for('static', filename='js/jquery-3.5.0.min.js')}}" type="text/javascript"></script>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=8ef53703-3c22-4160-b65d-eaa9ff05607d" type="text/javascript"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
     <script type='text/javascript'>$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};</script>
+    <script src="{{url_for('static', filename='js/jquery.maskedinput.min.js')}}"></script>
+    {% if args %}
+    <script type='text/javascript'>
+	ymaps.ready(init);
+
+function init() {
+    // Создаем карту.
+    var myMap = new ymaps.Map("mapWithRadius", {
+            center: [{{ args['point_latitude'] }}, {{ args['point_longitude'] }}],
+            zoom: 10
+        }, {
+            searchControlProvider: 'yandex#search'
+        });
+
+    // Создаем круг.
+    var myCircle = new ymaps.Circle([
+        // Координаты центра круга.
+        [{{ args['point_latitude'] }}, {{ args['point_longitude'] }}],
+        // Радиус круга в метрах.
+        {{ args['radius'] }}
+    ], {
+        // Описываем свойства круга.
+        // Содержимое балуна.
+        balloonContent: "Примерное местоположение",
+    }, {
+        // Задаем опции круга.
+        // Включаем возможность перетаскивания круга.
+        draggable: false,
+        // Цвет заливки.
+        // Последний байт (77) определяет прозрачность.
+        // Прозрачность заливки также можно задать используя опцию "fillOpacity".
+        fillColor: "#DB709377",
+        // Цвет обводки.
+        strokeColor: "#990066",
+        // Прозрачность обводки.
+        strokeOpacity: 0.8,
+        // Ширина обводки в пикселях.
+        strokeWidth: 0
+    });
+
+    // Добавляем круг на карту.
+    myMap.geoObjects.add(myCircle);
+}
+</script>
+<script type='text/javascript'>
+	ymaps.ready(init);
+
+function init() {
+    var myMap = new ymaps.Map("mapWithoutRadius", {
+            center: [{{ args['point_latitude'] }}, {{ args['point_longitude'] }}],
+            zoom: 10
+        }, {
+            searchControlProvider: 'yandex#search'
+        });
+
+    // Создаем геообъект с типом геометрии "Точка".
+        myGeoObject = new ymaps.GeoObject({
+            // Описание геометрии.
+            geometry: {
+                type: "Point",
+                coordinates: [{{ args['point_latitude'] }}, {{ args['point_longitude'] }}]
+            },
+            // Свойства.
+            properties: {
+                hintContent: 'Точное местоположение',
+                balloonContent: '{{ get_address((args["point_longitude"], args["point_latitude"])) }}'
+            }
+        }, {
+            // Опции.
+            // Иконка метки будет растягиваться под размер ее содержимого.
+            preset: 'islands#icon',
+            iconColor: '#0095b6'
+        })
+    myMap.geoObjects
+        .add(myGeoObject);
+}
+</script>
+{% endif %}
+    <script type="text/javascript">
+}
+//Код jQuery, установливающий маску для ввода телефона элементу input
+//1. После загрузки страницы,  когда все элементы будут доступны выполнить...
+$(function(){
+  //2. Получить элемент, к которому необходимо добавить маску
+  $("#phone").mask("8(999) 999-9999");
+});
+</script>
     <script type="text/javascript">
 ymaps.ready(init);
 
@@ -26,7 +111,6 @@ function init() {
         }, {
             searchControlProvider: 'yandex#search'
         });
-    alert('Карта делается');
     // Слушаем клик на карте.
     myMap.events.add('click', function (e) {
         var coords = e.get('coords');
@@ -83,11 +167,16 @@ function init() {
 </head>
 <body>
 	<header>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Магазин</a>
-        {% if current_user.is_authenticated %}
-    		<a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
-            <a class="navbar-brand" href="/messages">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="navbar-nav">
+        	{% if current_user.is_authenticated %}
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ current_user.name }}</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class='dropdown-item' href="/users/{{ current_user.id }}">Профиль</a>
+              <a class='dropdown-item' href="/messages">
                         Сообщения
                         {% set new_messages = current_user.new_messages() %}
                         <span id="message_count" class="badge"
@@ -96,12 +185,16 @@ function init() {
                             {{ new_messages }}
                         </span>
                     </a>
-            {% else %}
-    	<p>
-        	<a class="btn btn-primary " href="/register">Зарегистрироваться</a>
-        	<a class="btn btn-success" href="/login">Войти</a>
-    	</p>
+              <div class="dropdown-divider"></div>
+              <a class='dropdown-item' href="/logout">Выйти</a>
+            </div>
+          </li>
+          {% else %}
+        	<li class='dropdown-item'><a class="btn btn-primary " href="/register">Зарегистрироваться</a></li>
+        	<li class='dropdown-item'><a class="btn btn-success" href="/login">Войти</a></li>
 		{% endif %}
+        </ul>
+      </div>
     </nav>
 </header>
 {% with messages = get_flashed_messages() %}
