--- a/templates/products.html
+++ b/templates/products.html
@@ -18,7 +18,7 @@
                 <img class="img-fluid" src="/api/photos/{{products[i].photos.split(',')[0]}}" />
             </div>
             <div class="card-image-overlay m-auto">
-                <span class="card-detail-badge">{{user.hometown}}</span>
+                <span class="card-detail-badge">{{get_city((products[i]['point_longitude'], products[i]['point_latitude']))}}</span>
             </div>
             <div class="card-body text-center">
                 <div class="ad-title m-auto">
@@ -47,7 +47,7 @@
                 <img class="img-fluid" src="/api/photos/{{products[i + 1].photos.split(',')[0]}}" />
             </div>
             <div class="card-image-overlay m-auto">
-                <span class="card-detail-badge">{{user.hometown}}</span>
+                <span class="card-detail-badge">{{get_city((products[i + 1]['point_longitude'], products[i + 1]['point_latitude']))}}</span>
             </div>
             <div class="card-body text-center">
                 <div class="ad-title m-auto">
@@ -77,7 +77,7 @@
                 <img class="img-fluid" src="/api/photos/{{products[i].photos.split(',')[0]}}" />
             </div>
             <div class="card-image-overlay m-auto">
-                <span class="card-detail-badge">{{user.hometown}}</span>
+                <span class="card-detail-badge">{{get_city((products[i + 2]['point_longitude'], products[i + 2]['point_latitude']))}}</span>
             </div>
             <div class="card-body text-center">
                 <div class="ad-title m-auto">
@@ -96,14 +96,9 @@
     {% endif %}
     {% endfor %}
 </div>
-<div class="panel-group" id="collapse-group">
-    <div class="panel panel-info">
-      <div class="panel-heading">
-          <a data-toggle="collapse" data-parent="#collapse-group" href="#el1">Фильтр</a>
-        </div>
-      <div id="el1" class="collapse in">
-        <div class="panel-body">
-            <form action="" method="post">
+<a data-toggle="collapse" href="#filter" class='text-default'>Фильтр</a>
+  <div class="collapse in" id="filter">
+    <form action="" method="post">
     {{ form.hidden_tag() }}
     {{ form.csrf_token }}
     <p>
@@ -143,10 +138,7 @@
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     {{message}}
 </form>
-</div>
-      </div>
-    </div>
-</div>
+  </div>
 <br><br><br>
 <nav aria-label="...">
         <ul class="pager">
