--- a/templates/style.css
+++ b/templates/style.css
@@ -202,3 +202,8 @@ body {
 .header {
             padding: 5px;
         }
+.carousel-inner > .item >img{
+  min-height : 300px;
+  max-height : 300px;
+  width : 100%;
+}
