--- a/templates/products.html
+++ b/templates/products.html
@@ -140,18 +140,8 @@
 </form>
   </div>
 <br><br><br>
-<nav aria-label="...">
-        <ul class="pager">
-            <li class="previous{% if not prev_url %} disabled{% endif %}">
-                <a href="{{ prev_url or '#' }}">
-                    <span aria-hidden="true">&larr;</span> Назад
-                </a>
-            </li>
-            <li class="next{% if not next_url %} disabled{% endif %}">
-                <a href="{{ next_url or '#' }}">
-                    Вперед <span aria-hidden="true">&rarr;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+<div class="btn-group" role="group" aria-label="">
+    <a class='btn btn-primary{% if not prev_url %} disabled'{% endif %} href="{{ prev_url or '#' }}"><span aria-hidden="true">&larr;</span> Назад</a>
+    <a class='btn btn-primary{% if not next_url %} disabled'{% endif %} href="{{ next_url or '#' }}">Вперед <span aria-hidden="true">&rarr;</span></a>
+</div>
 {% endblock %}
